--- a/.dockerignore
+++ b/.dockerignore
@@ -13,3 +13,7 @@ Dockerfile
 # Pattern is *not covered* by node_modules/ above no matter what IntelliJ says!
 frontend/node_modules/
 frontend/dist/
+
+# Vim
+*.swp
+
