--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "anuglar2-qrcode": "~2.0.3",
+    "@datadog/browser-rum": "4.6",
     "canvas-confetti": "^1.4.0",
     "core-js": "^3.6.5",
     "file-saver": "^2.0.2",
