--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
     "config": "^3.3.1",
     "cookie-parser": "^1.4.5",
     "cors": "^2.8.5",
+    "dd-trace": "^2.3.1",
     "dottie": "^2.0.2",
     "download": "^8.0.0",
     "errorhandler": "^1.5.1",
@@ -152,6 +153,7 @@
     "jssha": "^3.1.1",
     "juicy-chat-bot": "~0.6.5",
     "libxmljs2": "~0.28.0",
+    "mariadb": "^3.0.0",
     "marsdb": "^0.6.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
