--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,7 @@
-version: "3"
+version: '3.1'
+
 services:
+
   app:
     build: .
     environment:
@@ -11,10 +13,13 @@ services:
       - ./.env
     depends_on:
       - datadog-agent
+      - db
+      - adminer
     ports:
       - "3000:3000"
     tty: true
     stdin_open: true
+
   datadog-agent:
     image: datadog/agent
     environment:
@@ -32,20 +37,20 @@ services:
       - /proc/:/host/proc/:ro
       - /sys/fs/cgroup:/host/sys/fs/cgroup:ro
       - /var/lib/docker/containers:/var/lib/docker/containers:ro
+
   db:
-    image: mariadb
+    image: mysql
+    command: --default-authentication-plugin=mysql_native_password
+    restart: always
     environment:
-      # DB
-      DB_ADDRESS: db
-      MARIADB_ROOT_PASSWORD: example
-      MARIADB_USER: dev
-      MARIADB_PASSWORD: example
-      MARIADB_DATABASE: juiceshop
-      # DD
-      DD_ENV: dev
-    labels:
-      com.datadoghq.com.logs: '[{ "source": "mysql", "service": "mysql" }]'
-      com.datadoghq.ad.check_names: '[ "mysql" ]'
-      com.datadoghq.ad.init_configs: '[{}]'
-      com.datadoghq.ad.instances: '[{ "server":"%%host%%", "user":"datadog", "pass":"toto90" }]'
+      MYSQL_ROOT_PASSWORD: example
+      MYSQL_DATABASE: juiceshop
+      MYSQL_USER: dev
+      MYSQL_PASSWORD: example
+
+  adminer:
+    image: adminer
+    restart: always
+    ports:
+      - 8080:8080
 
