--- a/package.json
+++ b/package.json
@@ -153,10 +153,10 @@
     "jssha": "^3.1.1",
     "juicy-chat-bot": "~0.6.5",
     "libxmljs2": "~0.28.0",
-    "mariadb": "^3.0.0",
     "marsdb": "^0.6.11",
     "morgan": "^1.10.0",
     "multer": "^1.4.2",
+    "mysql2": "^2.3.3",
     "node-pre-gyp": "^0.15.0",
     "notevil": "^1.3.3",
     "on-finished": "^2.3.0",
